Revision history for {{$dist->name}}

{{$NEXT}}

0.032     2014-04-22 18:29:06-07:00 America/Los_Angeles

        bail out early in Makefile.PL if git not installed, instead of
        failing tests (Karen Etheridge)

0.031     2014-03-17 08:10:42-07:00 America/Los_Angeles

        Only load IPC::Cmd if needed (Graham Knop)
        Reduce dependency on Path::Class to test.recommends, fix min version (Kent Fredric)
        Increment minimum version in eval check to match stated dist.ini version
        typo fix (dsteinbrunner)

0.030     2013-07-29 09:23:13 America/Los_Angeles

        Add explicit version dep on Path::Class (#40) (John SJ Anderson)
        Fixes typos. (Olaf Alders)

0.029     2013-05-07 10:21:26 America/Los_Angeles

        Included missed Changes update from last release...

0.028_97  2013-04-23 06:17:12 America/Los_Angeles

        Rework argument passing to deal with stringifying arguments (#29) (John SJ Anderson)

0.028_96  2013-02-24 16:19:15 America/Los_Angeles

	Support specifying the git binary location on new (Todd Rinaldo)
        Rework argument passing (#29) (John SJ Anderson, Mark Price)
        
0.028     2012-10-19 06:55:15 America/Los_Angeles

        Fix $git->branch compatibility with git < 1.7.1 by tweaking color calling convention (Vyacheslav Matyukhin)
    
0.027     2012-09-19 22:32:52 America/New_York

        Disable --no-abbrev-commit when git doesn't support it

0.026     2012-09-17 20:52:45 America/Los_Angeles

        Disable ANSI output for the branch command (John SJ Anderson)
        Force --no-abbrev-commit in git-log wrapper (Rob Hoelz)
        Add ABSTRACT for G::W::Statuses (John SJ Anderson)
        Fix the environment in a more sane way, to resolve issues on 5.8.x (introduced in v0.022) (Karen Etheridge)

0.025     2012-07-18 12:38:05 America/New_York

        Add 'fatal' option for RequiresExternal dzil plugin

0.024     2012-07-18 12:32:17 America/New_York
