@@ -2,7 +2,7 @@ use Devel::CheckBin;
 check_bin('git');
 
 
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.015.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.019.
 use strict;
 use warnings;
 
@@ -15,7 +15,6 @@ use ExtUtils::MakeMaker 6.30;
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Wrap git(7) command-line interface",
   "AUTHOR" => "Hans Dieter Pearcey <hdp\@cpan.org>, Chris Prather <chris\@prather.org>, John SJ Anderson <genehack\@genehack.org>",
-  "BUILD_REQUIRES" => {},
   "CONFIGURE_REQUIRES" => {
     "Devel::CheckBin" => 0,
     "ExtUtils::MakeMaker" => "6.30"
@@ -26,7 +25,7 @@ my %WriteMakefileArgs = (
   "NAME" => "Git::Wrapper",
   "PREREQ_PM" => {
     "File::Temp" => 0,
-    "File::pushd" => 0,
+    "File::pushd" => "1.05",
     "IPC::Cmd" => 0,
     "IPC::Open3" => 0,
     "Scalar::Util" => 0,
@@ -45,7 +44,7 @@ my %WriteMakefileArgs = (
     "Test::Exception" => 0,
     "Test::More" => 0
   },
-  "VERSION" => "0.032",
+  "VERSION" => "0.033",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -56,7 +55,7 @@ my %FallbackPrereqs = (
   "File::Path" => 0,
   "File::Spec" => 0,
   "File::Temp" => 0,
-  "File::pushd" => 0,
+  "File::pushd" => "1.05",
   "IO::File" => 0,
   "IPC::Cmd" => 0,
   "IPC::Open3" => 0,
