@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+        require File::pushd 1.05 at a minimum
+
 0.032     2014-04-22 18:29:06-07:00 America/Los_Angeles
 
         bail out early in Makefile.PL if git not installed, instead of
